--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "web-server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "keywords": [],
-  "description": "",
-  "dependencies": {
-    "express": "^4.16.4",
-    "handlebars": "^4.7.7",
-    "hbs": "^4.1.2",
-    "nodemon": "^2.0.13",
-    "request": "^2.88.0"
-  }
+ "name": "web-server",
+ "version": "1.0.0",
+ "main": "index.js",
+ "scripts": {
+  "start": "node /src/app.js"
+ },
+ "author": "",
+ "license": "ISC",
+ "keywords": [],
+ "description": "",
+ "dependencies": {
+  "express": "^4.16.4",
+  "handlebars": "^4.7.7",
+  "hbs": "^4.1.2",
+  "nodemon": "^2.0.13",
+  "request": "^2.88.0"
+ }
 }
