--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "handlebars": "^4.7.7",
   "hbs": "^4.1.2",
   "nodemon": "^2.0.13",
-  "request": "^2.88.0"
+  "request": "^2.88.0",
+  "socket.io": "^4.2.0"
  }
 }
