--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
  "scripts": {
   "start": "node src/app.js"
  },
+ "engines": {
+  "node": "14.x"
+ },
  "author": "",
  "license": "ISC",
  "keywords": [],
