--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
  "version": "1.0.0",
  "main": "index.js",
  "scripts": {
-  "start": "node src/app.js"
- },
- "engines": {
-  "node": "14.x"
+  "start": "node src/app.js",
+  "dev": "nodemon src/app.js -e js,hbs"
  },
  "author": "",
  "license": "ISC",
